display form on add click

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div id="add">+ Add Book</div>
     </header>
     <main>
-      <form action="/" method="GET">
+      <form id="form" action="/" method="GET">
         <h1>Add book to my library</h1>
         <label for="title">Title</label>
         <input type="text" id="title" name="title" required />
@@ -38,8 +38,10 @@
         <input type="checkbox" id="read" name="read" />
         <input type="submit" id="submit" value="Submit" />
       </form>
-      <div class="library">
-        <div class="card" hidden>&nbsp;</div>
+      <div id="library">
+        <div class="card">Lorem, ipsum dolor.</div>
+        <div class="card">Lorem, ipsum dolor.</div>
+        <div class="card">Lorem, ipsum dolor.</div>
       </div>
     </main>
   </body>
