add readme file

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
       <img src="./images/favicon-32x32.png" alt="Icon" />
       <h1>My personal library</h1>
-      <div id="add">+ Add Book</div>
+      <div id="add">+ NEW BOOK</div>
     </header>
     <main>
       <form id="form" action="/" method="GET">
