--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <form id="form" action="/" method="GET">
         <h1>Add book to my library</h1>
         <label for="title">Title</label>
-        <input type="text" id="title" name="title" required />
+        <input type="text" id="title" name="title" required minlength="5"/>
         <label for="author">Author</label>
-        <input type="text" id="author" name="author" required />
+        <input type="text" id="author" name="author" required minlength="5"/>
         <label for="pages">Pages </label>
-        <input type="number" id="pages" name="pages" required />
+        <input type="number" id="pages" name="pages" min="5" max="1000" required />
         <label for="read">Read </label>
         <input type="checkbox" id="read" name="read" />
         <input type="submit" id="submit" value="Submit" />
